Fix unique keys warning using wrapper div
Need to put unique key on the top-most returned component.
But wrapper `<>` cannot be keyed.

If wrapper <div key= > is used, `display:content` is needed
as a workaround for a nested subgrid (grid - grandchild) problem.
Without workaround, nested subgrid does not line up with container
grid lines.

--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -10,7 +10,11 @@
   perspective: 300px;
 }
 
-.grid > .grid-item {
+.grid > .subgrid-wrapper {
+  display: contents;
+}
+
+.grid .grid-item {
   height: 2rem;
 
   animation: flipin 1s linear;
